[gd_scene load_steps=13 format=3 uid="uid://dsbfkw7j7tuum"]

[ext_resource type="Script" uid="uid://oxtp74edr0jb" path="res://content/demos/attacks/characters/character.gd" id="1"]
[ext_resource type="Script" uid="uid://beu12sx0xq85a" path="res://content/demos/attacks/characters/health.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cqj27ge7bvauo" path="res://content/demos/attacks/characters/body.png" id="3"]
[ext_resource type="PackedScene" uid="uid://bxpp0hbsuuqhn" path="res://content/demos/attacks/vfx/PoisonBubbles.tscn" id="4"]
[ext_resource type="Script" uid="uid://6e1gdhgqxdo1" path="res://content/demos/attacks/characters/weapon/weapon-pivot.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://dcshljej0j0i" path="res://content/demos/attacks/characters/shadow.png" id="6"]

[sub_resource type="Animation" id="1"]
resource_name = "SETUP"
length = 0.01
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot/Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.32052, -4.20115)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shadow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyPivot/Body:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shadow:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BodyPivot/Body:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="2"]
resource_name = "die"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.35, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.296875, 0.296875, 1), Color(1, 1, 1, 1), Color(1, 0.296875, 0.296875, 1), Color(1, 1, 1, 1), Color(1, 0.296875, 0.296875, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35, 0.45, 0.65),
"transitions": PackedFloat32Array(1, 0.356926, 5.78413, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0.812022, 1.23284), Vector2(2.7717, 0.0452506)]
}

[sub_resource type="Animation" id="3"]
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="4"]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.296875, 0.296875, 1), Color(1, 1, 1, 1), Color(1, 0.296875, 0.296875, 1), Color(1, 1, 1, 1), Color(1, 0.296875, 0.296875, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dj7t2"]
_data = {
&"SETUP": SubResource("1"),
&"die": SubResource("2"),
&"idle": SubResource("3"),
&"stagger": SubResource("4")
}

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(61.1822, 52.661)

[node name="Character" type="CharacterBody2D" groups=["character"]]
collision_mask = 0
script = ExtResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dj7t2")
}

[node name="Health" type="Node" parent="."]
script = ExtResource("2")

[node name="PoisonTimer" type="Timer" parent="Health"]
process_mode = 1
wait_time = 1.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -7.69296)
shape = SubResource("5")

[node name="BodyPivot" type="Marker2D" parent="."]
z_index = 2

[node name="Body" type="Sprite2D" parent="BodyPivot"]
modulate = Color(1, 0.296875, 0.296875, 1)
texture = ExtResource("3")
offset = Vector2(0.335912, -58.7778)

[node name="PoisonBubbles" parent="BodyPivot" instance=ExtResource("4")]
position = Vector2(38, -142)
rotation = -1.29258
emitting = false

[node name="WeaponPivot" type="Marker2D" parent="."]
z_index = 2
position = Vector2(0, -40)
script = ExtResource("5")

[node name="WeaponSpawn" type="Marker2D" parent="WeaponPivot"]
position = Vector2(80, 0)

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.313726)
show_behind_parent = true
position = Vector2(-0.32052, -4.20115)
texture = ExtResource("6")
